# AutoHotKey

./: .gitignore  README.md  hotstring.py  hotstring.toml  pyproject.toml  script.ahk  script.template.ahk
hotstring/: hotstring.py  hotstring.toml
