[project]
name            = "AutoHotKey"
version         = "0.1.0"
description     = "Personal AHK script."
readme          = "README.md"
requires-python = ">=3.14"
dependencies    = ["cyclopts>=4.3.0", "msgspec>=0.20.0", "pyyaml>=6.0.3"]

[dependency-groups]
dev = ["ruff>=0.8.4"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D", "Q"]
